--- a/css/loginmodule.css
+++ b/css/loginmodule.css
@@ -5,7 +5,7 @@ body {
 	margin: 0px;
 	padding: 20px 10px 0px;
 	text-align:	center;
-	background-color: #E6FFF9;
+	background-color: #F1F1F1;
 
 		
 }
