--- a/css/new-full-list.css
+++ b/css/new-full-list.css
@@ -72,6 +72,18 @@ th {
  article, aside, figure, footer, header, hgroup, menu, nav, section { display: block; }        
         body { font-family: Arial; font-size: 11px; }
         #svgbasics { position: absolute; left: 0px; top: 0px; border: solid 0px #484; z-index: -100; }
-        .draggable { }
+        .draggable {cursor:pointer;	 }
+		        .draggable :hover{cursor:pointer;	
+					background-color:#FFD3B7; }
         .droppable { }
 		
+		.ui-corner-all draggable ui-draggable
+		{
+		cursor:pointer;	
+		}
+		
+		ui-corner-all draggable ui-draggable:hover
+		{
+		cursor:pointer;	
+		background-color:#FFD3B7;
+		}
