-tried to make clicked links of tags, to open at the correct update # .. added #element_ID to hyperlink didnt actually work, but theory is right? i dunno
-map now works, with colors, squares made smaller.. no errors..
 drawing lines function is disabled for now, array nature isnt figured out yet..

--- a/css/update.css
+++ b/css/update.css
@@ -17,7 +17,7 @@ body {
 .float_breaker{
 clear:both;	
 }
-#li_title{
+.li_title{
 
 	background:#AEAEFF;
 	width:100%;
@@ -26,7 +26,7 @@ clear:both;
 	padding:0px;
 
 }
-#li_tagged{
+.li_tagged{
 	color:#F03;
 	background-color:#fff;
 	list-style:none;
@@ -36,7 +36,7 @@ clear:both;
 	
 }
 
-#li_text{
+.li_text{
 	list-style:none;
 	text-align:left;
 	width:100%;
@@ -46,7 +46,7 @@ clear:both;
 	
 	
 }
-#li_dev{
+.li_dev{
 	list-style:none;
 	margin:0px;
 	padding:0px;
