--- a/css/full-list.css
+++ b/css/full-list.css
@@ -127,9 +127,52 @@ background:#000;
 color:#FFF;
 cursor:pointer;
 
+}
+/* popup_box DIV-Styles*/
+#popup_box { 
+    display:none; /* Hide the DIV */
+    position:fixed;  
+    _position:absolute; /* hack for internet explorer 6 */  
+    height:300px;  
+    width:600px;  
+    background:#FFFFFF;  
+    left: 300px;
+    top: 150px;
+    z-index:1000; /* Layering ( on-top of others), if you have lots of layers: I just maximized, you can change it yourself */
+    margin-left: 15px;  
+    
+    /* additional features, can be omitted */
+    border:3px solid #9398FD;      
+    padding:15px;  
+    font-size:15px;  
+    -moz-box-shadow: 0 0 8px #006;
+    -webkit-box-shadow: 0 0 8px #006;
+    box-shadow: 0 0 8px #006;
+    overflow:scroll;
+	 
+}
+/* This is for the positioning of the Close Link */
+#popupBoxClose {
+    font-size:20px;  
+    line-height:15px;  
+    right:5px;  
+    top:5px;  
+    position:absolute;  
+    color:#6fa5e2;  
+    font-weight:500;      
+		z-index: 1001;
 
 	
-	
+}
+
+#mask {
+	display: none;
+	background: #000; 
+	position: fixed; left: 0; top: 0; 
+	z-index: 10;
+	width: 100%; height: 100%;
+	opacity: 0.8;
+	z-index: 999;
 }
 #new_page{
 display:none;	
