--- a/css/index.css
+++ b/css/index.css
@@ -1,15 +1,6 @@
-/* CSS Document */.
+/* CSS Document */ 
 
-body {
-	
-	font: 14px Verdana, Arial, Helvetica, sans-serif;
-	color: #666666;
-	margin: 0px;
-	padding: 20px 10px 0px;
-	background-color: #F1F1F1;
 
-		
-}
 .textfield {
 	font-size: 11px;
 	color: #333333;
@@ -25,6 +16,17 @@ h1 {
 	text-align:left;
 	
 	
+}
+
+body {
+	
+	font: 14px Verdana, Arial, Helvetica, sans-serif;
+	color: #0000;
+	margin: 0px;
+	padding: 20px 10px 0px;
+	background-color: #F1F1F1;
+
+		
 }
 
 
@@ -104,11 +106,13 @@ info b a:hover{
  }
  
  #div_print_table{
-	background-color:#DADADA;
+	background-color:#fff;
     width:60%;
     padding: 10px;
   	height:200px;
 	 overflow:scroll;
+	 position:relative;
+	 
  }
 
  
@@ -116,6 +120,7 @@ info b a:hover{
 	   width:60%;
 	 	 float:left;
 		 margin:10px;
+		 position:relative;
 		 
 		 }
 #div_static_area ul li{
@@ -170,8 +175,12 @@ background-color:#A8CAFD;
 .horizontal-nav {
     background: #efefef;
     border-radius: 6px;
+	
+
 }
 .horizontal-nav ul {
+	 
+	width: 470px;
     background: #000;
     float: left;
     text-align: center;
@@ -189,7 +198,7 @@ background-color:#A8CAFD;
 }
 .horizontal-nav ul li a {
     display: block;
-    padding: 5% 25%;
+    padding: 5% ;
     color: #fff;
     border-top: 1px solid rgba(255,255,255, 0.25);
     border-left: 1px solid rgba(255,255,255, 0.25);
@@ -202,5 +211,15 @@ background-color:#A8CAFD;
 	color:#000;
 }
 
-      
+ .div_animation_loader
+ {
+	 position:absolute;
+	 top:0;
+	 left:0;
+	 width:100%;
+	 height:100%;
+	 background:  rgba(255,255,255, .8) url('../images/general-icons/loading.gif') no-repeat 50%;
+	 
+	 
+ }
  
